--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -188,7 +188,7 @@
     "## Export Using a Callback\n",
     "<a id=\"Export-Using-a-Callback\"></a>\n",
     "\n",
-    "The Composer trainer also lets you specify an export callback that automatically exports at the end of training. Since we will be training a model for a few epochs, we'll first create a dataloader with synthetic dataset for this tutorial."
+    "The Composer trainer also lets you specify an export callback that automatically exports at the end of training. Since we will be training a model for a few epochs, we'll first create a dataloader with CIFAR for this tutorial."
    ]
   },
   {
@@ -198,10 +198,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from composer.datasets.synthetic import SyntheticBatchPairDataset\n",
     "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets\n",
     "\n",
-    "dataset = SyntheticBatchPairDataset(total_dataset_size=8, data_shape=(3, 224, 224), num_classes=1000)\n",
+    "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
+    "\n",
+    "dataset = DataLoader(train_dataset, batch_size=4)\n",
     "dataloader = DataLoader(dataset=dataset, batch_size=4)"
    ]
   },
@@ -222,11 +224,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from torchvision.models import resnet\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "from composer.models import ComposerClassifier\n",
     "\n",
-    "model = ComposerClassifier(module=resnet.resnet50(), num_classes=1000)"
+    "class Model(nn.Module):\n",
+    "    \"\"\"Toy convolutional neural network architecture in pytorch for MNIST.\"\"\"\n",
+    "\n",
+    "    def __init__(self, num_classes: int = 10):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.num_classes = num_classes\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(1, 16, (3, 3), padding=0)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, (3, 3), padding=0)\n",
+    "        self.bn = nn.BatchNorm2d(32)\n",
+    "        self.fc1 = nn.Linear(32 * 16, 32)\n",
+    "        self.fc2 = nn.Linear(32, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.conv1(x)\n",
+    "        out = F.relu(out)\n",
+    "        out = self.conv2(out)\n",
+    "        out = self.bn(out)\n",
+    "        out = F.relu(out)\n",
+    "        out = F.adaptive_avg_pool2d(out, (4, 4))\n",
+    "        out = torch.flatten(out, 1, -1)\n",
+    "        out = self.fc1(out)\n",
+    "        out = F.relu(out)\n",
+    "        return self.fc2(out)\n",
+    "\n",
+    "\n",
+    "model = ComposerClassifier(module=Model(num_classes=10))"
    ]
   },
   {
