--- a/examples/custom_speedup_methods.ipynb
+++ b/examples/custom_speedup_methods.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will define a model. For this, we will simply use Composer's ResNet-56. One quirk to be aware of with this model is that the forward method takes in an `(X, y)` pair of inputs and targets, essentially what the dataloaders will spit out."
+    "Next, we will define a model. For this, we will simply use Composer's ResNet-50. One quirk to be aware of with this model is that the forward method takes in an `(X, y)` pair of inputs and targets, essentially what the dataloaders will spit out."
    ]
   },
   {
@@ -129,9 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from composer.models import composer_resnet_cifar\n",
+    "from torchvision.models import resnet\n",
+    "from composer.models.tasks import ComposerClassifier\n",
     "\n",
-    "model = composer_resnet_cifar(model_name='resnet_56', num_classes=10)"
+    "model = ComposerClassifier(model=resnet('resnet50'), num_classes=10)"
    ]
   },
   {
