--- a/examples/custom_speedup_methods.ipynb
+++ b/examples/custom_speedup_methods.ipynb
@@ -54,6 +54,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll set up a toy resnet model for CIFAR. This will be useful throughout this tutorial as an example model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class Block(nn.Module):\n",
+    "    \"\"\"A ResNet block.\"\"\"\n",
+    "\n",
+    "    def __init__(self, f_in: int, f_out: int, downsample: bool = False):\n",
+    "        super(ResNetCIFAR.Block, self).__init__()\n",
+    "\n",
+    "        stride = 2 if downsample else 1\n",
+    "        self.conv1 = nn.Conv2d(f_in, f_out, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(f_out)\n",
+    "        self.conv2 = nn.Conv2d(f_out, f_out, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm2d(f_out)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        # No parameters for shortcut connections.\n",
+    "        if downsample or f_in != f_out:\n",
+    "            self.shortcut = nn.Sequential(\n",
+    "                nn.Conv2d(f_in, f_out, kernel_size=1, stride=2, bias=False),\n",
+    "                nn.BatchNorm2d(f_out),\n",
+    "            )\n",
+    "        else:\n",
+    "            self.shortcut = nn.Sequential()\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        out = self.relu(self.bn1(self.conv1(x)))\n",
+    "        out = self.bn2(self.conv2(out))\n",
+    "        out += self.shortcut(x)\n",
+    "        return self.relu(out)\n",
+    "\n",
+    "class ResNetCIFAR(nn.Module):\n",
+    "    \"\"\"A residual neural network as originally designed for CIFAR-10.\"\"\"\n",
+    "\n",
+    "    def __init__(self, outputs: int = 10):\n",
+    "        super(ResNetCIFAR, self).__init__()\n",
+    "\n",
+    "        depth = 56\n",
+    "        width = 16\n",
+    "        num_blocks = (depth - 2) // 6\n",
+    "\n",
+    "        plan = [(width, num_blocks), (2 * width, num_blocks), (4 * width, num_blocks)]\n",
+    "\n",
+    "        self.num_classes = outputs\n",
+    "\n",
+    "        # Initial convolution.\n",
+    "        current_filters = plan[0][0]\n",
+    "        self.conv = nn.Conv2d(3, current_filters, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(current_filters)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        # The subsequent blocks of the ResNet.\n",
+    "        blocks = []\n",
+    "        for segment_index, (filters, num_blocks) in enumerate(plan):\n",
+    "            for block_index in range(num_blocks):\n",
+    "                downsample = segment_index > 0 and block_index == 0\n",
+    "                blocks.append(ResNetCIFAR.Block(current_filters, filters, downsample))\n",
+    "                current_filters = filters\n",
+    "\n",
+    "        self.blocks = nn.Sequential(*blocks)\n",
+    "\n",
+    "        # Final fc layer. Size = number of filters in last segment.\n",
+    "        self.fc = nn.Linear(plan[-1][0], outputs)\n",
+    "        self.criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        out = self.relu(self.bn(self.conv(x)))\n",
+    "        out = self.blocks(out)\n",
+    "        out = F.avg_pool2d(out, out.size()[3])\n",
+    "        out = out.view(out.size(0), -1)\n",
+    "        out = self.fc(out)\n",
+    "        return out"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -303,7 +398,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = composer_resnet_cifar(model_name='resnet_56', num_classes=10)"
+    "from composer.models import ComposerClassifier\n",
+    "\n",
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)"
    ]
   },
   {
@@ -517,7 +614,9 @@
    "outputs": [],
    "source": [
     "# Baseline (i.e., without ColOut)\n",
-    "model = composer_resnet_cifar(model_name=\"resnet_56\", num_classes=10)\n",
+    "from composer.models import ComposerClassifier\n",
+    "\n",
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
     "trainer = Trainer(\n",
@@ -560,7 +659,9 @@
    "outputs": [],
    "source": [
     "# With ColOut\n",
-    "model = composer_resnet_cifar(model_name=\"resnet_56\", num_classes=10)\n",
+    "from composer.models import ComposerClassifier\n",
+    "\n",
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
     "# An instance of our ColOut algorithm class!\n",
@@ -653,7 +754,9 @@
    "outputs": [],
    "source": [
     "# With ColOut and BlurPool\n",
-    "model = composer_resnet_cifar(model_name=\"resnet_56\", num_classes=10)\n",
+    "from composer.models import ComposerClassifier\n",
+    "\n",
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
     "trainer = Trainer(\n",
