--- a/examples/custom_speedup_methods.ipynb
+++ b/examples/custom_speedup_methods.ipynb
@@ -227,7 +227,7 @@
     "from torchvision.models import resnet\n",
     "from composer.models.tasks import ComposerClassifier\n",
     "\n",
-    "model = ComposerClassifier(model=resnet('resnet50'), num_classes=10)"
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)"
    ]
   },
   {
