--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -541,7 +541,7 @@
     "    \"\"\"A ResNet block.\"\"\"\n",
     "\n",
     "    def __init__(self, f_in: int, f_out: int, downsample: bool = False):\n",
-    "        super(ResNetCIFAR.Block, self).__init__()\n",
+    "        super(Block, self).__init__()\n",
     "\n",
     "        stride = 2 if downsample else 1\n",
     "        self.conv1 = nn.Conv2d(f_in, f_out, kernel_size=3, stride=stride, padding=1, bias=False)\n",
@@ -590,7 +590,7 @@
     "        for segment_index, (filters, num_blocks) in enumerate(plan):\n",
     "            for block_index in range(num_blocks):\n",
     "                downsample = segment_index > 0 and block_index == 0\n",
-    "                blocks.append(ResNetCIFAR.Block(current_filters, filters, downsample))\n",
+    "                blocks.append(Block(current_filters, filters, downsample))\n",
     "                current_filters = filters\n",
     "\n",
     "        self.blocks = nn.Sequential(*blocks)\n",
