--- a/examples/checkpoint_autoresume.ipynb
+++ b/examples/checkpoint_autoresume.ipynb
@@ -77,16 +77,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class MNISTModel(nn.Module):\n",
+    "    \"\"\"Toy convolutional neural network architecture in pytorch for MNIST.\"\"\"\n",
+    "\n",
+    "    def __init__(self, num_classes: int = 10):\n",
+    "        super().__init__()\n",
+    "        self.num_classes = num_classes\n",
+    "        self.conv1 = nn.Conv2d(1, 16, (3, 3), padding=0)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, (3, 3), padding=0)\n",
+    "        self.bn = nn.BatchNorm2d(32)\n",
+    "        self.fc1 = nn.Linear(32 * 16, 32)\n",
+    "        self.fc2 = nn.Linear(32, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.conv1(x)\n",
+    "        out = F.relu(out)\n",
+    "        out = self.conv2(out)\n",
+    "        out = self.bn(out)\n",
+    "        out = F.relu(out)\n",
+    "        out = F.adaptive_avg_pool2d(out, (4, 4))\n",
+    "        out = torch.flatten(out, 1, -1)\n",
+    "        out = self.fc1(out)\n",
+    "        out = F.relu(out)\n",
+    "        return self.fc2(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch.utils.data\n",
     "from torch.optim import SGD\n",
     "from torchvision.datasets import MNIST\n",
     "from torchvision.transforms import ToTensor\n",
     "\n",
     "from composer import Trainer\n",
-    "from composer.models.classify_mnist import mnist_model\n",
+    "from composer.models import ComposerClassifier\n",
     "\n",
     "# Configure the trainer -- here, we train a simple MNIST classifier\n",
-    "model = mnist_model(num_classes=10)\n",
+    "model = ComposerClassifier(module=MNISTModel(num_classes=10), num_classes=10)\n",
     "optimizer = SGD(model.parameters(), lr=0.01)\n",
     "train_dataloader = torch.utils.data.DataLoader(\n",
     "    dataset=MNIST('~/datasets', train=True, download=True, transform=ToTensor()),\n",
