--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -201,9 +201,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets\n",
     "\n",
-    "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
-    "\n",
-    "dataset = DataLoader(train_dataset, batch_size=4)\n",
+    "dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
     "dataloader = DataLoader(dataset=dataset, batch_size=4)"
    ]
   },
