--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -199,9 +199,15 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets\n",
+    "from torchvision import datasets, transforms\n",
     "\n",
-    "dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
+    "cifar10_transforms = transforms.Compose([\n",
+    "  transforms.ToTensor(), \n",
+    "  transforms.Normalize(mean, std),\n",
+    "  transforms.Resize(size=[96, 96])  # choose a large image size\n",
+    "])\n",
+    "\n",
+    "dataset = datasets.CIFAR10(\"./data\", train=True, download=True, transform=cifar10_transforms)\n",
     "dataloader = DataLoader(dataset=dataset, batch_size=4)"
    ]
   },
