--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -201,6 +201,9 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms\n",
     "\n",
+    "mean = (0.507, 0.487, 0.441)\n",
+    "std = (0.267, 0.256, 0.276)\n",
+    "\n",
     "cifar10_transforms = transforms.Compose([\n",
     "  transforms.ToTensor(), \n",
     "  transforms.Normalize(mean, std),\n",
