--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -231,38 +231,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from composer.models import ComposerClassifier\n",
     "\n",
-    "class Model(nn.Module):\n",
-    "    \"\"\"Toy convolutional neural network architecture in pytorch for MNIST.\"\"\"\n",
+    "class Block(nn.Module):\n",
+    "    \"\"\"A ResNet block.\"\"\"\n",
     "\n",
-    "    def __init__(self, num_classes: int = 10):\n",
-    "        super().__init__()\n",
+    "    def __init__(self, f_in: int, f_out: int, downsample: bool = False):\n",
+    "        super(Block, self).__init__()\n",
     "\n",
-    "        self.num_classes = num_classes\n",
+    "        stride = 2 if downsample else 1\n",
+    "        self.conv1 = nn.Conv2d(f_in, f_out, kernel_size=3, stride=stride, padding=1, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(f_out)\n",
+    "        self.conv2 = nn.Conv2d(f_out, f_out, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm2d(f_out)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
     "\n",
-    "        self.conv1 = nn.Conv2d(1, 16, (3, 3), padding=0)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, (3, 3), padding=0)\n",
-    "        self.bn = nn.BatchNorm2d(32)\n",
-    "        self.fc1 = nn.Linear(32 * 16, 32)\n",
-    "        self.fc2 = nn.Linear(32, num_classes)\n",
+    "        # No parameters for shortcut connections.\n",
+    "        if downsample or f_in != f_out:\n",
+    "            self.shortcut = nn.Sequential(\n",
+    "                nn.Conv2d(f_in, f_out, kernel_size=1, stride=2, bias=False),\n",
+    "                nn.BatchNorm2d(f_out),\n",
+    "            )\n",
+    "        else:\n",
+    "            self.shortcut = nn.Sequential()\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        out = self.conv1(x)\n",
-    "        out = F.relu(out)\n",
-    "        out = self.conv2(out)\n",
-    "        out = self.bn(out)\n",
-    "        out = F.relu(out)\n",
-    "        out = F.adaptive_avg_pool2d(out, (4, 4))\n",
-    "        out = torch.flatten(out, 1, -1)\n",
-    "        out = self.fc1(out)\n",
-    "        out = F.relu(out)\n",
-    "        return self.fc2(out)\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        out = self.relu(self.bn1(self.conv1(x)))\n",
+    "        out = self.bn2(self.conv2(out))\n",
+    "        out += self.shortcut(x)\n",
+    "        return self.relu(out)\n",
     "\n",
+    "class ResNetCIFAR(nn.Module):\n",
+    "    \"\"\"A residual neural network as originally designed for CIFAR-10.\"\"\"\n",
     "\n",
-    "model = ComposerClassifier(module=Model(num_classes=10))"
+    "    def __init__(self, outputs: int = 10):\n",
+    "        super(ResNetCIFAR, self).__init__()\n",
+    "\n",
+    "        depth = 56\n",
+    "        width = 16\n",
+    "        num_blocks = (depth - 2) // 6\n",
+    "\n",
+    "        plan = [(width, num_blocks), (2 * width, num_blocks), (4 * width, num_blocks)]\n",
+    "\n",
+    "        self.num_classes = outputs\n",
+    "\n",
+    "        # Initial convolution.\n",
+    "        current_filters = plan[0][0]\n",
+    "        self.conv = nn.Conv2d(3, current_filters, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(current_filters)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        # The subsequent blocks of the ResNet.\n",
+    "        blocks = []\n",
+    "        for segment_index, (filters, num_blocks) in enumerate(plan):\n",
+    "            for block_index in range(num_blocks):\n",
+    "                downsample = segment_index > 0 and block_index == 0\n",
+    "                blocks.append(Block(current_filters, filters, downsample))\n",
+    "                current_filters = filters\n",
+    "\n",
+    "        self.blocks = nn.Sequential(*blocks)\n",
+    "\n",
+    "        # Final fc layer. Size = number of filters in last segment.\n",
+    "        self.fc = nn.Linear(plan[-1][0], outputs)\n",
+    "        self.criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        out = self.relu(self.bn(self.conv(x)))\n",
+    "        out = self.blocks(out)\n",
+    "        out = F.avg_pool2d(out, out.size()[3])\n",
+    "        out = out.view(out.size(0), -1)\n",
+    "        out = self.fc(out)\n",
+    "        return out\n",
+    "\n",
+    "model = ComposerClassifier(module=ResNetCIFAR(), num_classes=10)"
    ]
   },
   {
