--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -199,11 +199,11 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms\n",
+    "from torchvision import datasets\n",
     "\n",
-    "mnist_transforms = transforms.Compose([transforms.ToTensor()])\n",
+    "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
     "\n",
-    "dataset = datasets.MNIST(\"./data\", train=True, download=True, transform=mnist_transforms)\n",
+    "dataset = DataLoader(train_dataset, batch_size=4)\n",
     "dataloader = DataLoader(dataset=dataset, batch_size=4)"
    ]
   },
