--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -204,7 +204,9 @@
     "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
     "\n",
     "dataset = DataLoader(train_dataset, batch_size=4)\n",
-    "dataloader = DataLoader(dataset=dataset, batch_size=4)"
+    "dataloader = DataLoader(dataset=dataset, batch_size=4)\n",
+    "\n",
+    "input_mnist = (torch.rand(4, 1, 28, 28), torch.Tensor())"
    ]
   },
   {
@@ -440,7 +442,7 @@
     "ort_session = ort.InferenceSession(model_save_path, providers=['CPUExecutionProvider'])\n",
     "outputs = ort_session.run(\n",
     "    None,\n",
-    "    {'input': input[0].numpy()})\n",
+    "    {'input': input_mnist[0].numpy()})\n",
     "print(f\"The predicted classes are {np.argmax(outputs[0], axis=1)}\")"
    ]
   },
