--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -199,13 +199,12 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets\n",
+    "from torchvision import datasets, transforms\n",
     "\n",
-    "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
+    "mnist_transforms = transforms.Compose([transforms.ToTensor()])\n",
     "\n",
-    "dataset = DataLoader(train_dataset, batch_size=4)\n",
+    "dataset = datasets.MNIST(\"./data\", train=True, download=True, transform=mnist_transforms)\n",
     "dataloader = DataLoader(dataset=dataset, batch_size=4)\n",
-    "\n",
     "input_mnist = (torch.rand(4, 1, 28, 28), torch.Tensor())"
    ]
   },
