--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -229,7 +229,7 @@
     "import torch.nn.functional as F\n",
     "from composer.models import ComposerClassifier\n",
     "\n",
-    "class Model(nn.Module):\n",
+    "class ToyModel(nn.Module):\n",
     "    \"\"\"Toy convolutional neural network architecture in pytorch for MNIST.\"\"\"\n",
     "\n",
     "    def __init__(self, num_classes: int = 10):\n",
@@ -256,7 +256,7 @@
     "        return self.fc2(out)\n",
     "\n",
     "\n",
-    "model = ComposerClassifier(module=Model(num_classes=10))"
+    "model = ComposerClassifier(module=ToyModel(num_classes=10))"
    ]
   },
   {
@@ -500,9 +500,9 @@
     "model_save_path = os.path.join(working_dir.name, 'model2.onnx')\n",
     "checkpoint_path = os.path.join(working_dir.name, 'ep2-ba4-rank0.pt')\n",
     "\n",
-    "model = ComposerClassifier(module=resnet.resnet50(), num_classes=1000)\n",
+    "model = ComposerClassifier(module=ToyModel(num_classes=10))\n",
     "\n",
-    "export_for_inference(model=model, \n",
+    "export_for_inference(model=model,\n",
     "                     save_format=save_format, \n",
     "                     save_path=model_save_path, \n",
     "                     sample_input=(input, {}),\n",
@@ -546,7 +546,7 @@
     "ort_session = ort.InferenceSession(model_save_path, providers=['CPUExecutionProvider'])\n",
     "new_outputs = ort_session.run(\n",
     "    None,\n",
-    "    {'input': input[0].numpy()},\n",
+    "    {'input': input_mnist[0].numpy()},\n",
     ")\n",
     "print(np.allclose(outputs[0], new_outputs[0], atol=1e-07))"
    ]
