--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -619,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = traced_model(input)\n",
+    "output = traced_model(input_mnist)\n",
     "print(f\"The predicted classes are {torch.argmax(output, dim=1)}\")"
    ]
   },
