--- a/examples/exporting_for_inference.ipynb
+++ b/examples/exporting_for_inference.ipynb
@@ -199,12 +199,13 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets\n",
+    "from torchvision import datasets, transforms\n",
     "\n",
-    "train_dataset = datasets.CIFAR10(\"./data\", train=True, download=True)\n",
+    "mnist_transforms = transforms.Compose([transforms.ToTensor()])\n",
     "\n",
-    "dataset = DataLoader(train_dataset, batch_size=4)\n",
-    "dataloader = DataLoader(dataset=dataset, batch_size=4)"
+    "dataset = datasets.MNIST(\"./data\", train=True, download=True, transform=mnist_transforms)\n",
+    "dataloader = DataLoader(dataset=dataset, batch_size=4)\n",
+    "input_mnist = (torch.rand(4, 1, 28, 28), torch.Tensor())"
    ]
   },
   {
@@ -228,7 +229,7 @@
     "import torch.nn.functional as F\n",
     "from composer.models import ComposerClassifier\n",
     "\n",
-    "class Model(nn.Module):\n",
+    "class ToyModel(nn.Module):\n",
     "    \"\"\"Toy convolutional neural network architecture in pytorch for MNIST.\"\"\"\n",
     "\n",
     "    def __init__(self, num_classes: int = 10):\n",
@@ -255,7 +256,7 @@
     "        return self.fc2(out)\n",
     "\n",
     "\n",
-    "model = ComposerClassifier(module=Model(num_classes=10))"
+    "model = ComposerClassifier(module=ToyModel(num_classes=10))"
    ]
   },
   {
@@ -440,7 +441,7 @@
     "ort_session = ort.InferenceSession(model_save_path, providers=['CPUExecutionProvider'])\n",
     "outputs = ort_session.run(\n",
     "    None,\n",
-    "    {'input': input[0].numpy()})\n",
+    "    {'input': input_mnist[0].numpy()})\n",
     "print(f\"The predicted classes are {np.argmax(outputs[0], axis=1)}\")"
    ]
   },
@@ -499,12 +500,12 @@
     "model_save_path = os.path.join(working_dir.name, 'model2.onnx')\n",
     "checkpoint_path = os.path.join(working_dir.name, 'ep2-ba4-rank0.pt')\n",
     "\n",
-    "model = ComposerClassifier(module=resnet.resnet50(), num_classes=1000)\n",
+    "model = ComposerClassifier(module=ToyModel(num_classes=10))\n",
     "\n",
-    "export_for_inference(model=model, \n",
+    "export_for_inference(model=model,\n",
     "                     save_format=save_format, \n",
     "                     save_path=model_save_path, \n",
-    "                     sample_input=(input, {}),\n",
+    "                     sample_input=(input_mnist, {}),\n",
     "                     surgery_algs=[cf.apply_squeeze_excite],\n",
     "                     load_path=checkpoint_path)"
    ]
@@ -545,7 +546,7 @@
     "ort_session = ort.InferenceSession(model_save_path, providers=['CPUExecutionProvider'])\n",
     "new_outputs = ort_session.run(\n",
     "    None,\n",
-    "    {'input': input[0].numpy()},\n",
+    "    {'input': input_mnist[0].numpy()},\n",
     ")\n",
     "print(np.allclose(outputs[0], new_outputs[0], atol=1e-07))"
    ]
@@ -618,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = traced_model(input)\n",
+    "output = traced_model(input_mnist)\n",
     "print(f\"The predicted classes are {torch.argmax(output, dim=1)}\")"
    ]
   },
