--- a/examples/finetune_huggingface.ipynb
+++ b/examples/finetune_huggingface.ipynb
@@ -77,8 +77,8 @@
     "import transformers\n",
     "\n",
     "# Create a BERT sequence classification model using Hugging Face transformers\n",
-    "model = transformers.AutoModelForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=2)\n",
-    "tokenizer = transformers.AutoTokenizer.from_pretrained('bert-base-uncased') "
+    "model = transformers.AutoModelForSequenceClassification.from_pretrained('google-bert/bert-base-uncased', num_labels=2)\n",
+    "tokenizer = transformers.AutoTokenizer.from_pretrained('google-bert/bert-base-uncased') "
    ]
   },
   {
