--- a/examples/checkpoint_autoresume.ipynb
+++ b/examples/checkpoint_autoresume.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "We've put together this tutorial to demonstrate this feature in action and how you can activate it through the Composer trainer.\n",
     "\n",
-    "**🐕 Autoresume via Watchdog**: Composer autoresumption works best when coupled with automated node failure detection and retries on the MosaicML platform. \n",
+    "**🐕 Autoresume via Watchdog**: Composer autoresumption works best when coupled with automated node failure detection and retries on Mosaic AI training. \n",
     "See our [platform docs page](https://docs.mosaicml.com/projects/mcli/en/latest/training/watchdog.html) on enabling this feature for your runs\n",
     "\n",
     "### Recommended Background\n",
