--- a/examples/custom_speedup_methods.ipynb
+++ b/examples/custom_speedup_methods.ipynb
@@ -724,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "set up the blurpool object"
+    "Set up the blurpool object"
    ]
   },
   {
