--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## set Up Our Workspace"
+    "## Set Up Our Workspace"
    ]
   },
   {
