--- a/examples/migrate_from_ptl.ipynb
+++ b/examples/migrate_from_ptl.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## setup\n",
+    "## Setup\n",
     "\n",
     "We'll first install dependencies and define the data and model."
    ]
