--- a/examples/auto_microbatching.ipynb
+++ b/examples/auto_microbatching.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## set Up Our Workspace"
+    "## Set Up Our Workspace"
    ]
   },
   {
