--- a/examples/training_with_submitit.ipynb
+++ b/examples/training_with_submitit.ipynb
@@ -249,7 +249,7 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "## set up Environment Variables"
+    "## Set up Environment Variables"
    ]
   },
   {
@@ -313,7 +313,7 @@
     "    # 7. MASTER_PORT\n",
     "    port = 54321\n",
     "    \n",
-    "    # set All the Necessary Environment Variables!\n",
+    "    # Set All the Necessary Environment Variables!\n",
     "    os.environ[\"RANK\"] = str(global_rank)\n",
     "    os.environ[\"LOCAL_RANK\"] = str(local_rank)\n",
     "    os.environ[\"LOCAL_WORLD_SIZE\"] = str(ngpus_per_node)\n",
@@ -540,7 +540,7 @@
     "    # 7. MASTER_PORT\n",
     "    port = 54321\n",
     "    \n",
-    "    # set All the Necessary Environment Variables!\n",
+    "    # Set All the Necessary Environment Variables!\n",
     "    os.environ[\"RANK\"] = str(global_rank)\n",
     "    os.environ[\"LOCAL_RANK\"] = str(local_rank)\n",
     "    os.environ[\"LOCAL_WORLD_SIZE\"] = str(ngpus_per_node)\n",
